--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,253 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	background-color: transparent;
+}
+.main_div {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	text-shadow: 0px 2px 4px;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	text-align: center
+
+}
+.main_div2 {
+	width: 100%;
+	height: 80vh;
+	display: flex;
+	text-shadow: 0px 2px 4px;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	text-align: center
+}
+.center_div{
+	width: 50vh;
+	height: 90vh;
+	background-color: #f4f4f4;
+	box-shadow: 5px 5px 25px -5px;
+	border-radius: 15px;
+}
+.center_div2{
+	width: 50vh;
+	height: 20vh;
+	background-color: #f4f4f4;
+	box-shadow: 5px 5px 25px -5px;
+	border-radius: 15px;
+	text-align: center;
+}
+h1 {
+	font-family: 'Lovers Quarrel', cursive;
+	font-size: 42px;
+	color: white;
+	background: transparent;
+	background-color: #8566aa;
+	padding: 6px 0 2px 0;
+	margin-bottom: 0px;
+	box-shadow: 5px 5px 0px -5px;	
+	text-align: center;
+}
+h1:hover{
+	color:cyan;
+	text-shadow: 0px 2px 4px -1px;
+	box-shadow: 5px 5px 0px -5px;	}
+
+input {
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+	height: 30px;
+	top: 10px;
+	border: none;
+	background: transparent;
+	font-size: 20px;
+	font-weight: 500;
+	width: 60%;
+	border-bottom: 2px solid #8566aa;
+	outline: none;
+}
+.button_one {
+	text-align: center;
+	align-content: center;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	border-color: transparent;
+	background-color: #8566aa;
+	color: #fff;
+	font-size: 15px;
+	border: none;
+	outline: none;
+	margin-top: 0px;
+	margin-left: 7px;
+	cursor: pointer;
+	box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.3);
+}
+.button_one:hover {
+	background-color: lime
+}
+ol li {
+	margin: 0px; 
+	padding-left : 0px;
+	text-align: left;
+	font-size: 20px;
+	font-weight: 500;
+	min-height: 40px;
+	display: flex;
+	align-items: center;
+	color: #8566aa;
+	text-transform: capitalize;
+	background: transparent;
+}
+.button_two {
+	height: 20px;
+	width: 20px;
+	border-radius: 50%;
+	border-color: transparent;
+	background-color: #8566aa;
+	color: #fff;
+	font-size: 10px;
+	border: none;
+	outline: none;
+	margin-left: 7px;
+	box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.3);
+}
+.button_two:hover {
+	background-color: cyan;
+}
+.div_clock{
+	margin-top: -29px;
+	font-size: 12px;
+	background-color: #8566aa;
+	padding: 0px;
+	align-content: right;
+	align-items: right;
+}
+.img_div{
+	/*width: 200px;*/
+	/*height: 200px;*/
+	padding-top: 20px;
+	display: flex;
+	flex-direction: row;
+	margin-left: 10px;
+	justify-content: center;
+	align-items: center;
+	/*text-align: center;*/
+}
+.button_three {
+	text-align: center;
+	align-content: center;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	border-color: transparent;
+	background-color: #f4b400;
+	color: #fff;
+	font-size: 15px;
+	border: none;
+	outline: none;
+	margin-top: 0px;
+	margin-left: 7px;
+	cursor: pointer;
+	box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.3);
+}
+.button_three:hover {
+	background-color: red
+}
+.button_four {
+	text-align: center;
+	align-content: center;
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	border-color: transparent;
+	background-color: #f4b400;
+	color: #fff;
+	font-size: 15px;
+	border: none;
+	outline: none;
+	margin-top: 0px;
+	margin-left: 7px;
+	cursor: pointer;
+	box-shadow: 5px 5px 15px -5px rgba(0 ,0,0,0.3);
+}
+.button_four:hover {
+	background-color: #CCCC00
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.menu {
+	display: flex;
+	justify-content: right;
+	
+}
+
+NavLink:hover{
+	color: red;
+}
+a.active_class {
+	color: white;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
